k8s/minio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`img.app.local`)
      kind: Rule
      services:
        - name: minio
          port: 9000
